--- a/styles.css
+++ b/styles.css
@@ -1,98 +1,137 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  body {
-    font-family: inter;
-    font-weight: normal;
-    background: rgb(245, 245, 245);
-  }
-  
-  h1 {
-    text-align: center;
-    margin-top: 60px;
-    font-size: 35px;
-  }
-  
-  p {
-    text-align: center;
-    margin: 15px auto 0px auto;
-    font-size: 16px;
-    width: 80%;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: normal;
+  background: rgb(245, 245, 245);
+  height: auto;
+}
+
+h1 {
+  text-align: center;
+  margin-top: 60px;
+  font-size: 35px;
+}
+
+p {
+  text-align: center;
+  margin: 15px auto 0px auto;
+  font-size: 16px;
+  width: 80%;
+}
+
+.mainMenu {
+  display: grid;
+  width: 90%;
+  grid-template-columns: 1fr;
+  justify-items: center;
+  padding-left: 10%;
+}
+
+.mainMenu a {
+  padding: 50px;
+  display: grid;
+  place-self: center stretch;
+  margin: 20px 0px;
+  color: white;
+  text-decoration: none;
+  background: rgba(51, 45, 45, 0.5);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(5.5px);
+  -webkit-backdrop-filter: blur(5.5px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+
+.contact-form {
+  margin: 35px auto 0px auto;
+  width: 80%;
+}
+
+.contact-form label {
+  font-size: 20px;
+  display: inline-block;
+  margin-bottom: 10px;
+}
+
+.contact-form input {
+  padding: 12px 20px;
+  outline: none;
+  border: none;
+  border-bottom: 2px solid #ccc;
+  background: rgb(255, 255, 255);
+  font-size: 18px;
+  border-radius: 3px;
+  margin-bottom: 20px;
+  width: 100%;
+}
+
+.contact-form input:focus {
+  border-bottom: 2px solid #1a883f;
+}
+
+.contact-form textarea {
+  padding: 12px 20px;
+  outline: none;
+  border: none;
+  border-bottom: 2px solid #ccc;
+  background: rgb(255, 255, 255);
+  font-size: 18px;
+  border-radius: 3px;
+  width: 100%;
+  font-family: inter;
+  font-weight: normal;
+}
+
+.contact-form textarea:focus {
+  border-bottom: 2px solid #1a883f;
+}
+
+.contact-form button {
+  font-size: 19px;
+  width: 100%;
+  margin-top: 25px;
+  border: none;
+  padding: 12px 20px;
+  background-color: #22b352;
+  color: #fff;
+  border-radius: 3px;
+  cursor: pointer;
+  transition: 0.2s ease-in-out;
+  border-bottom: 3px solid #1a883f;
+  margin-bottom: 150px;
+}
+
+.contact-form button:hover {
+  background-color: #1a883f;
+  border-bottom: 3px solid #22b352;
+}
+
+@media all and (min-width: 1000px) {
   .contact-form {
-    margin: 35px auto 0px auto;
-    width: 80%;
+    width: 40%;
   }
-  
-  .contact-form label {
-    font-size: 20px;
-    display: inline-block;
-    margin-bottom: 10px;
+}
+
+@media all and (min-width: 1080px) {
+  .contact-form {
+    width: 30%;
   }
-  
-  .contact-form input {
-    padding: 12px 20px;
-    outline: none;
-    border: none;
-    border-bottom: 2px solid #ccc;
-    background: rgb(255, 255, 255);
-    font-size: 18px;
-    border-radius: 3px;
-    margin-bottom: 20px;
-    width: 100%;
-  }
-  
-  .contact-form input:focus {
-    border-bottom: 2px solid #1a883f;
-  }
-  
-  .contact-form textarea {
-    padding: 12px 20px;
-    outline: none;
-    border: none;
-    border-bottom: 2px solid #ccc;
-    background: rgb(255, 255, 255);
-    font-size: 18px;
-    border-radius: 3px;
-    width: 100%;
-    font-family: inter;
-    font-weight: normal;
-  }
-  
-  .contact-form textarea:focus {
-    border-bottom: 2px solid #1a883f;
-  }
-  
-  .contact-form button {
-    font-size: 19px;
-    width: 100%;
-    margin-top: 25px;
-    border: none;
-    padding: 12px 20px;
-    background-color: #22b352;
-    color: #fff;
-    border-radius: 3px;
-    cursor: pointer;
-    transition: 0.2s ease-in-out;
-    border-bottom: 3px solid #1a883f;
-  }
-  
-  .contact-form button:hover {
-    background-color: #1a883f;
-    border-bottom: 3px solid #22b352;
-  }
-  
-  @media all and (min-width: 1000px) {
-    .contact-form {
-      width: 40%;
-    }
-  }
-  
-  @media all and (min-width: 1080px) {
-    .contact-form {
-      width: 30%;
-    }
-  }
+}
+
+.result {
+  width: 80%;
+  display: grid;
+  grid-template-columns: 1fr;
+  padding-left: 10%;
+  margin-top: 20px;
+}
+.result div {
+  font-size: 18px;
+  margin: 5px;
+}
